[tool.poetry]
name = "tolha"
version = "0.2.0"
description = "Unofficial Library to access your my telco data"
authors = ["Nutchanon Ninyawee <nutchanon@codustry.com>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/CircleOnCircles/tolha"

[tool.poetry.dependencies]
python = "^3.8"
playwright = "^0.142.3"
python-decouple = "^3.3"
loguru = "^0.5.3"
fastapi-utils = "^0.2.1"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pdoc = "^8.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
